# ipl4eo-dependencies

./: .gitignore  README.md  pyproject.toml
labs/: Lab04.ipynb  Lab05.ipynb
