[project]
name = "ipl4eo-dependencies"
version = "0.1.3"
description = "IPL4EO Dependencies"
readme = "README.md"
requires-python = ">=3.12,<3.13"
# FUTURE: Relax these dependencies.
dependencies = [
  "numpy>=1.22",
  "sentinelsat>=1",
  "jupyter",
  "notebook",
  "pydantic",
  "dynaconf",
  # updating geopandas or rasterio should,
  # be done deliberately and tested!,
  "matplotlib",
  "geopandas>=1.0",
  "rasterio>=1.4",
  "osmnx",
  "seaborn",
  "easydict",
  "scikit-learn",
  "spectral",
  # taking values from:,
  # https://pytorch.org/get"tarted/previous-versions/,
  # "pytorch==2.5.1",
  # "torchvision==0.20.1",
  # "torchaudio==2.5.1",
  "torchinfo",
  # "visdom",
  "openpyxl",
  "ipywidgets",
  "jupyterlab_widgets",
  "jupyterlab",
  "black",
  "isort",
  "flake8",
  "pytest",
  # "pip",
  "requests",
  "rich",
  "tqdm",
  "tensorboard",
  "lightning",
  "folium",
  "mapclassify",
  "umap-learn",
]

# FUTURE: uv2nix tries to also resolve darwin which fails for the given package!
[project.optional-dependencies]
cpu = [
  "torch~=2.5.0",
  "torchvision~=0.20.0",
  "torchaudio~=2.5.1"
]
cuda118 = [
  "torch~=2.5.0",
  "torchvision~=0.20.0",
  "torchaudio~=2.5.1"
]
cuda124 = [
  "torch~=2.5.0",
  "torchvision~=0.20.0",
  "torchaudio~=2.5.1"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda118" },
    { extra = "cuda124" },
  ]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  # , marker = "sys_platform == 'linux'" <- didn't work
  { index = "pytorch-cuda124", extra = "cuda124" },
  { index = "pytorch-cuda118", extra = "cuda118" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda124", extra = "cuda124" },
  { index = "pytorch-cuda118", extra = "cuda118" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

